--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
 
+# config upload file
+media.server-path=${MEDIA_SERVER_PATH}
+media.client-path=/media/**
+media.base-uri=${MEDIA_BASE_URI}
+
+#files max and min size
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
+
+
