--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 spring.application.name=mbangking-api
 
+#sendMail
+spring.mail.username=${kimoungpoly@gmail.com}
+#mail password developer
+spring.mail.password=${gbvu pnta ojjq mmzg}
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Database
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
@@ -9,13 +19,16 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
 
+#spring.security.user.name=devs
+#spring.security.user.password=springApi
+
 # config upload file
 media.server-path=${MEDIA_SERVER_PATH}
 media.client-path=/media/**
 media.base-uri=${MEDIA_BASE_URI}
 
 #files max and min size
-spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-file-size=20MB 
 spring.servlet.multipart.max-request-size=20MB
 
 
