acess and token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,4 +31,9 @@ media.base-uri=${MEDIA_BASE_URI}
 spring.servlet.multipart.max-file-size=20MB 
 spring.servlet.multipart.max-request-size=20MB
 
+keys.access-private-token=keys/access-private
+keys.access-public-token=keys/access-public
+keys.refresh-public-token=keys/refresh-public
+keys.refresh-private-token=keys/refresh-private
+
 
