--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,3 +3,6 @@ DB_PASSWORD = Database@2024
 DB_HOST = localhost
 DB_PORT = 5433
 DB_NAME = mbanking
+
+MEDIA_SERVER_PATH=/home/ite/media/
+MEDIA_BASE_URI=http://localhost:8080/media/
