Add README file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=mbangking-api
 
 #sendMail
-spring.mail.username=${kimoungpoly@gmail.com}
+spring.mail.username=${youremail}
 #mail password developer
-spring.mail.password=${gbvu pnta ojjq mmzg}
+spring.mail.password=${yourpassword}
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
@@ -30,5 +30,3 @@ media.base-uri=${MEDIA_BASE_URI}
 #files max and min size
 spring.servlet.multipart.max-file-size=20MB 
 spring.servlet.multipart.max-request-size=20MB
-
-
